k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-converter-deployment
  namespace: video-to-audio-converter
  labels:
    app: gateway-converter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-converter
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: gateway-converter
    spec:
      containers:
        - name: gateway-converter
          image: gabzsz/gateway_converter:0.1.5
